# CodingSandBox-Comp5421

Comp5421/Assignment03/: CMakeLists.txt  Quad.cpp  Quad.h  Test_Quad.cpp
Comp5421/Assignment04/: AcuteTriangle.cpp  AcuteTriangle.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Shape.cpp  Shape.h  ShapeTestDriver.cpp  Triangle.cpp  Triangle.h
Comp5421/Assignment05/: CMakeLists.txt  assignment5.cpp  assignment5.h  assignment_5_test_driver.cpp
Comp5421/PolymorphPractice/: BasePlusCommissionEmployee.cpp  BasePlusCommissionEmployee.h  CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h
